# wechat4rs

./: .env  Cargo.toml  README.md
example/: Cargo.toml
example/src/: main.rs
wechat4rs/: Cargo.toml  README.md
wechat4rs/src/: customservice.rs  lib.rs  menu.rs  message.rs  req_utils.rs  wechat.rs
wechat4rs/src/core/: config.rs  errors.rs  mod.rs  token_provider.rs  utils.rs
