[package]
name = "example"
version = "0.1.0"
authors = ["Walter ye <hupeng.net@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
wechat4rs = { path = "../wechat4rs" }
actix-rt = "1"
actix-web = "2.0"
log = "0.4"
env_logger = "0.7"
dotenv = "*"
envy = "0"
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.3", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
anyhow = { version = "1.0", default-features = true }
thiserror = "1.0"
smol = { version = "0.1", features = ["tokio02"] }
redis = "0.15"
bb8-redis = "0.5"
bb8 = "0.4"
