[package]
name = "wechat4rs"
version = "0.1.1"
authors = ["Walter ye <hupeng.net@hotmail.com>"]
license = "MIT OR Apache-2.0"
description = "微信sdk"
repository = "https://github.com/any35/wechat4rs"
homepate = "https://github.com/any35/wechat4rs"
documentation = "https://docs.serde.rs/wechat4rs"
edition = "2018"
keywords = ["wechat", "skd"]
categories = ["api-bindings", "web-programming"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "tests/**/*.rs", "README.md"]

[features]
default = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = "0.4"
env_logger = "0.7"
dotenv = "0.15"
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.3", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
anyhow = { version = "1.0", default-features = true }
thiserror = "1.0"
smol = { version = "0.1", features = ["tokio02"] }
shaku = "0.4"
maplit = "1.0"
chrono = "0"
regex = "1"
string-builder = "0.2"
# use 0.2 compacte with xpath
sxd-document = "0.3"
sxd-xpath = "0.4"
# 加密, 解密
openssl = "0.10"
base64 = "0.12"
byteorder = "1.3"
rand = "0.7"
hex = "0.4"
# actix-web
actix-web = "2"
http = "0"
